# IronKey

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  roadmap.md
.github/workflows/: rust-publish.yml
aur/: .SRCINFO  PKGBUILD
src/: main.rs
src/mods/: auth.rs  config.rs  entry_detail.rs  entry_form.rs  generator.rs  mod.rs  passgen.rs  state.rs  utils.rs  vault.rs  vault_list.rs
