[package]
name = "ironkey"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A simple password manager/generator with rich TUI"
homepage = "https://github.com/KekmaTime/IronKey"
documentation = "https://github.com/KekmaTime/IronKey/blob/master/README.md"
repository = "https://github.com/KekmaTime/IronKey"
readme = "README.md"
categories = ["security", "cli", "password-manager","command-line-utilities"]
keywords = ["password","generator", "cli", "tui"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = { version = "0.26.0", features = ["all-widgets"] }
dirs = "5.0.1"
x11-clipboard = "0.9.2"
serde_json = "1.0.113"
wl-clipboard-rs = { version = "0.8.1", optional = true }
serde = { version = "1", features = ["derive"] }
aes-gcm = "0.10"
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
zeroize = "1"
base64 = "0.22"
toml = "0.8"

[features]
wayland_support = ["wl-clipboard-rs"]